--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,68 @@
 html {
   box-sizing: border-box;
   line-height: 1.5;
+  font-family: Georgia, serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+img {
+  width: 100%;
+  height: 16rem;
+  padding: 0 1rem;
+}
+
+h1, h2 {
+  font-family: "Denk One", sans-serif;
+  color: #623b0c;
+  padding: 0 1rem;
+}
+
+h1 {
+  margin: 1rem 0;
+}
+
+body {
+  background-color: #f5f2f0;
+  margin: 0;
+}
+
+ol {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas:
+    "banner banner"
+    "col1 col2"
+    "col1 col2";
+  gap: 1rem;
+  padding: 1rem;
+  margin-top: -.5rem;
+}
+
+li {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  border: 2px #623b0c solid;
+  border-radius: 8px;
+  background-color: #ede3db;
+  list-style-type: none;
+}
+
+a {
+  background-color: #623b0c;
+  text-decoration: none;
+  color: #fff;
+  border-radius: 8px;
+  padding: .5em .75em .6em;
+  margin: 1.1rem;
+}
+
+p {
+  padding: 0 .75rem 0 1rem;
 }
 
 /* font-family: 'Denk One', sans-serif; */
