--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ img {
   width: 100%;
   height: 16rem;
   padding: 0 1rem;
+  margin-bottom: .15rem;
 }
 
 h1, h2 {
@@ -22,6 +23,11 @@ h1, h2 {
 
 h1 {
   margin: 1rem 0;
+}
+
+h2 {
+  margin: 1rem 0 1.5rem;
+  padding-bottom: 0;
 }
 
 body {
@@ -50,6 +56,7 @@ li {
   border-radius: 8px;
   background-color: #ede3db;
   list-style-type: none;
+  margin-bottom: 0;
 }
 
 a {
@@ -57,12 +64,13 @@ a {
   text-decoration: none;
   color: #fff;
   border-radius: 8px;
-  padding: .5em .75em .6em;
-  margin: 1.1rem;
+  padding: .5em 1rem .6em;
+  margin: 1rem;
 }
 
 p {
-  padding: 0 .75rem 0 1rem;
+  padding: .5rem 1rem 0;
+  margin-bottom: .5rem;
 }
 
 /* font-family: 'Denk One', sans-serif; */
